--- a/TeamProject/templates/main.html
+++ b/TeamProject/templates/main.html
@@ -4,15 +4,13 @@
     <link rel="stylesheet" type="text/css" href="../static/css/main.css">
     <link rel="stylesheet" type="text/css" href="../static/css/group.css">
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
-    <link rel="stylesheet" type="text/css" href="slick/slick.css" />
-    <!-- Add the new slick-theme.css if you want the default styling -->
-    <link rel="stylesheet" type="text/css" href="slick/slick-theme.css" />
+
 </head>
 
 <body>
 
 
-    <div data-aos="fade-up" data-aos-duration="1000" data-aos-easing="ease" class="container aos-init aos-animate">
+    <div data-aos="zoom-in" data-aos-duration="1000" class="container aos-init aos-animate">
         <div>
             <span class="logo">ROOMS</span>
         </div>
@@ -32,7 +30,7 @@
             <img src="../static/img/arrow-left.png" alt="">
         </div>
         <div class="flex3">
-            <img src="../static/img/dog.png" alt="" class="group_image">
+            <img src="../static/img/dog.png" alt="" class="group-image">
             <h2 id="group-1" class="n-group">베스트 1</h2>
         </div>
         <div class="flex3">
@@ -60,45 +58,57 @@
 
     <div class="s_container">
         <div class="s_btn_left">
-            <img src="../static/img/arrow-left.png" alt="" class="s_btn">
+            <img src="../static/img/arrow-left.png" alt=""  class="s_btn">
         </div>
         <div class="s_btn_right">
             <img src="../static/img/arrow-right.png" alt="" class="s_btn">
         </div>
-        <div class="slider">
-            <div class="slide">
-                <img src="../static/img/dog.png" alt="" class="s_img">
-                <h2>베스트 1</h2>
-            </div>
-            <div class="slide">
-                <img src="../static/img/dog.png" alt="" class="s_img">
-                <h2>베스트 2</h2>
-            </div>
-            <div class="slide">
-                <img src="../static/img/dog.png" alt="" class="s_img">
-                <h2>베스트 3</h2>
-            </div>
-            <div class="slide">
-                <img src="../static/img/dog.png" alt="" class="s_img">
-                <h2>베스트 4</h2>
-            </div>
-            <div class="slide">
-                <img src="../static/img/dog.png" alt="" class="s_img">
-                <h2>베스트 5</h2>
-            </div>
-            <div class="slide">
-                <img src="../static/img/dog.png" alt="" class="s_img">
-                <h2>베스트 6</h2>
-            </div>
-            <div class="slide">
-                <img src="../static/img/dog.png" alt="" class="s_img">
-                <h2>베스트 7</h2>
-            </div>
-            <div class="slide">
-                <img src="../static/img/dog.png" alt="" class="s_img">
-                <h2>베스트 8</h2>
+
+        <div class="slider_wrap">
+            <div class="slider">
+                <div class="slide">
+                    <img src="../static/img/dog.png" alt="" class="s_img">
+                    <div>베스트 1</div>
+                </div>
+                <div class="slide">
+                    <img src="../static/img/dog.png" alt="" class="s_img">
+                    <div>베스트 2</div>
+                </div>
+                <div class="slide">
+                    <img src="../static/img/dog.png" alt="" class="s_img">
+                    <div>베스트 3</div>
+                </div>
+                <div class="slide">
+                    <img src="../static/img/dog.png" alt="" class="s_img">
+                    <div>베스트 4</div>
+                </div>
+                <div class="slide">
+                    <img src="../static/img/dog.png" alt="" class="s_img">
+                    <div>베스트 5</div>
+                </div>
+                <div class="slide">
+                    <img src="../static/img/dog.png" alt="" class="s_img">
+                    <div>베스트 6</div>
+                </div>
+                <div class="slide">
+                    <img src="../static/img/dog.png" alt="" class="s_img">
+                    <div>베스트 7</div>
+                </div>
+                <div class="slide">
+                    <img src="../static/img/dog.png" alt="" class="s_img">
+                    <div>베스트 8</div>
+                </div>
+                <div class="slide">
+                    <img src="../static/img/dog.png" alt="" class="s_img">
+                    <div>베스트 9</div>
+                </div>
+                <div class="slide">
+                    <img src="../static/img/dog.png" alt="" class="s_img">
+                    <div>베스트 10</div>
+                </div>
             </div>
         </div>
+    
 
         <div class="generic-wrap">
             <div class="generic">
@@ -116,9 +126,7 @@
     <script>
         AOS.init();
     </script>
-    <script type="text/javascript" src="//code.jquery.com/jquery-1.11.0.min.js"></script>
-    <script type="text/javascript" src="//code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
-    <script type="text/javascript" src="slick/slick.min.js"></script>
+    <script src="../static/js/main.js" type="text/javascript"></script>
 
 </body>
 
