--- a/TeamProject/templates/main.html
+++ b/TeamProject/templates/main.html
@@ -56,7 +56,7 @@
 
 
 
-    <div class="s_container">
+    <div class="s_container aos-init aos-animate"  data-aos="fade-right" data-aos-duration="1000">
         <div class="s_btn_left">
             <img src="../static/img/arrow-left.png" alt=""  class="s_btn">
         </div>
@@ -106,18 +106,11 @@
                     <img src="../static/img/dog.png" alt="" class="s_img">
                     <div>베스트 10</div>
                 </div>
-            </div>
+            </div> 
         </div>
     
-
-        <div class="generic-wrap">
-            <div class="generic">
-                <div class="box now"></div>
-                <div class="box"></div>
-                <div class="box"></div>
-                <div class="box"></div>
-                <div class="box"></div>
-            </div>
+        <div class="slide_bar">
+            <div class="bar"></div>
         </div>
     </div>
 
@@ -129,7 +122,6 @@
     <script src="../static/js/main.js" type="text/javascript"></script>
 
 </body>
-
 
 
 </html>
