--- a/TeamProject/static/css/style.css
+++ b/TeamProject/static/css/style.css
@@ -3,114 +3,8 @@
 	padding: 0;
 }
 
-.__center{
-	position: absolute;
-	top:50%;
-	left: 50%;
-	background: transparent;
-	transform: translate(-50%,-50%);
-}
-#main{
-	background-color: #FFFF99;
+body{
 	font-size: 14px;
     line-height: 1.5;
     font-family: 'Nanum Gothic', sans-serif;
 }
-.nav{
-	/*정렬관련*/
-	display: flex;
-	flex-direction:column;
-	align-items: center; 
-	justify-content: space-around;
-
-	
-	width:250px;
-	height: 100%;
-	background:#222;
-	position:fixed;
-	top: 0;
-	left: -250px;
-	z-index:1; /*위로올라오게*/
-	transition:all.35s;
-
-	background-color: white;
-}
-.nav__menu{
-	list-style:none;
-	display: flex;
-	flex-direction:column;
-	align-items: center;
-	justify-content: center;
-}
-.nav__menu a{
-	padding:20%;
-	font-size: 100%;
-	text-decoration:none;
-	color : black;
-}
-.nav__menu a:hover{
-	color: white;
-	text-decoration:none;
-	background-color: black;
-}
-
-.nav__menu li{
-	 margin-top: 70%;
-}
-.nav__logo{
-	margin-top: 130px;
-}
-.nav__links{
-	margin-left: 70%;
-}
-
-
-input[id="menuicon"]{
-	display:none;
-}
-
-input[id="menuicon"] + label{
-	margin: 30px;
-	display: block;	
-	width: 	60px;
-	height: 	40px;
-	position: 	relative;
-	cursor: pointer;	
-}
-input[id="menuicon"]:checked + label+ nav{
-		left: 	0;
-}
-input[id="menuicon"]+label span{
-	display: block;
-	position: absolute;
-	width : 100%;
-	height: 5px;
-	border-radius: 	30px; /*모서리둥글게,100%시 동그라미*/
-	background: #000;
-	transition: all.35s;
-}
-
-input[id="menuicon"]+label span:nth-child(1){
-		top:0;
-}*
-input[id="menuicon"]+label span:nth-child(2){
-		top:50%;
-		transform:  translateY(-50%);
-}*	
-input[id="menuicon"]+label span:nth-child(3){
-		bottom:0;
-}*
-input[id="menuicon"]:checked +label{
-	z-index: 2;
-}
-input[id="menuicon"]:checked +label span:nth-child(1){
-		top:50%;
-		transform:  translateY(-50%) rotate(45deg);
-}*
-input[id="menuicon"]:checked +label span:nth-child(2){
-		opacity: 0;
-}*	
-input[id="menuicon"]:checked +label span:nth-child(3){
-		bottom:50%;
-		transform: translateY(50%) rotate(-45deg);
-}*
