layout, css 수정 (2020.08.29)
layout, css 수정 (2020.08.29)

--- a/TeamProject/static/css/style.css
+++ b/TeamProject/static/css/style.css
@@ -8,3 +8,9 @@ body{
     line-height: 1.5;
     font-family: 'Nanum Gothic', sans-serif;
 }
+header{
+	width: 100%;
+	height: 70px;
+	border: 1px solid black;
+	background-color: darkslateblue;
+}
