--- a/TeamProject/static/css/Rooms.css
+++ b/TeamProject/static/css/Rooms.css
@@ -7,13 +7,14 @@
 	position: absolute;
 	background: transparent;
 	width: 70%;
-	height: 80%;	
+	height: 80%;
+	margin-top: 10px;
 }
 .Board__title{
 	margin-top: 10px;
 	width:90%;
 	height: 50px;
-	background-color: lightpink;
+	background-color: darkslateblue;
 }
 .Board__title h1{
 	margin: 10px;
@@ -27,14 +28,12 @@
 	width: 90%;
 	height:100%;
 	list-style:none;
-	margin-left: 10px;
-
 }
 .board__lists__item{
 	width: 100%;
 	background-color: white;
 	margin-bottom: 10px;
-	border: 2px solid yellow;
+	border: 1px solid darkslateblue;
 	cursor: pointer;
 }
 .board__lists__item h3{
@@ -77,7 +76,7 @@
 
 }
 .input__off textarea{
-	border: 2px solid yellow;
+	border: 1px solid darkslateblue;
 	width: 100%;
 	opacity: 0.5;
 	cursor: pointer;
@@ -93,14 +92,14 @@
 	height: 200px;
 }
 .input__subject{
-	border: 2px solid yellow;
+	border: 1px solid darkslateblue;
 	margin-top: 5px;
 	width: 100%;
 	height: 25%;
 	opacity: 0.5;
 }
 .input__article{
-	border: 2px solid yellow;
+	border: 1px solid darkslateblue;
 	margin:10px;
 	resize: none;
 	width: 100%;
