--- a/TeamProject/templates/main.html
+++ b/TeamProject/templates/main.html
@@ -55,14 +55,8 @@
 
 
 
-
+    <!-- 베스트 룸 목록 슬라이더 -->
     <div class="s_container aos-init aos-animate"  data-aos="fade-right" data-aos-duration="1000">
-        <div class="s_btn_left">
-            <img src="../static/img/arrow-left.png" alt=""  class="s_btn">
-        </div>
-        <div class="s_btn_right">
-            <img src="../static/img/arrow-right.png" alt="" class="s_btn">
-        </div>
 
         <div class="slider_wrap">
             <div class="slider">
@@ -106,6 +100,12 @@
                     <img src="../static/img/dog.png" alt="" class="s_img">
                     <div>베스트 10</div>
                 </div>
+                <div class="s_btn_left s_btn">
+                    <img src="../static/img/arrow-left.png" alt="" class="s_btn_img">
+                </div>
+                <div class="s_btn_right s_btn">
+                    <img src="../static/img/arrow-right.png" alt="" class="s_btn_img">
+                </div>
             </div> 
         </div>
     
@@ -113,6 +113,12 @@
             <div class="bar"></div>
         </div>
     </div>
+
+    <!-- 베스트 글 목록 -->
+    <div class="best_board">
+        베스트 글
+    </div>
+
 
     <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
