대분류 추가

--- a/TeamProject/templates/main.html
+++ b/TeamProject/templates/main.html
@@ -252,7 +252,31 @@
             </div>
             <div class="big_room">
                 <div class="big_room_name">
-                    연예인
+                    연예 / 방송
+                </div>
+                <div class="small_room">
+
+                </div>
+            </div>
+            <div class="big_room">
+                <div class="big_room_name">
+                    IT / 교육
+                </div>
+                <div class="small_room">
+
+                </div>
+            </div>
+            <div class="big_room">
+                <div class="big_room_name">
+                    여행 / 음식
+                </div>
+                <div class="small_room">
+
+                </div>
+            </div>
+            <div class="big_room">
+                <div class="big_room_name">
+                    취미 / 생활
                 </div>
                 <div class="small_room">
 
