--- a/TeamProject/templates/rooms.html
+++ b/TeamProject/templates/rooms.html
@@ -10,22 +10,43 @@
 	<link rel='stylesheet' href="{{ url_for('static', filename='css/Rooms.css') }}">
 
 </head>
-<body id="main">
+<body>
 	<header>
-		rooms
-	</header>
-	<section class="Board">
-		<div class="Board__title">
-			<h1>모임이름 - 게시판</h1>
+		<div class="nav_logo">
+			<a href="/rooms">
+				<img src="https://img.icons8.com/ios/50/000000/room.png"/>
+			</a>
+			<p>ROOMS</p>
 		</div>
-		 <!-- 게시판글쓰기 -->
-		<div class="Board__input"></div>
- 		<!-- 게시판글목록 -->
-		<div class="Board__lists"></div>
+		<div class="search_bar">
+			<input type="textarea" placeholder="Search">
+		</div>
+		<div class="user_profile">
+			<a href="">
+				<img src="https://img.icons8.com/ios/50/000000/user-male-circle.png"/>
+			</a>
+			<p></p>
+		</div>
+	</header>
+	<div class="container">
+		<section class="Board">
+			<div class="Board__title">
+				<h1>모임이름 - 게시판</h1>
+			</div>
+			<!-- 게시판글쓰기 -->
+			<div class="Board__input"></div>
+			<!-- 게시판글목록 -->
+			<div class="Board__lists"></div>
 
-	</section>
+		</section>
 
-	<section></section>
+		<section class="side">
+			<div class="side_best"></div>
+			<div class="side_one"></div>
+			<div class="side_two"></div>
+		</section>
+	</div>
+
 	<script src="{{ url_for('static', filename='js/rooms.js') }}"></script>
 </body>
 </html>
