--- a/TeamProject/templates/main.html
+++ b/TeamProject/templates/main.html
@@ -15,8 +15,24 @@
             <span class="logo">ROOMS</span>
         </div>
         <div class="sub-container">
-            <a href="/login">Login</a> |
-            <a href="">Signup</a>
+            <span class="main_login">Login</span> | 
+            <span class="main_signup">Sign up</span>
+        </div>
+    </div>
+
+    <div class="login_modal_back">
+        <div class="login_modal">
+            <div class="login_exit">X</div>
+            <div class="login_title">
+                Login
+            </div>
+            <div class="login_id">
+                <input type="text" name="id" class="login_input" placeholder="Enter Your ID" autocomplete="off">
+            </div>
+            <div class="login_pw">
+                <input type="password" name="pw" class="login_input" placeholder="Enter Your PW" autocomplete="off">
+            </div>
+            <div><button id="login_btn" class="login_btn">LOGIN</button></div>
         </div>
     </div>
 
