--- a/TeamProject/static/css/Rooms.css
+++ b/TeamProject/static/css/Rooms.css
@@ -77,10 +77,12 @@
 .input__off textarea{
 	width: 100%;
 	height: 100%;
+	margin-top: 5px;
 	background-color: white;
 	cursor: pointer;
 	border-radius: 5px;
 	border: 0px;
+
 }
 textarea::placeholder{
 	text-indent: 10px;
@@ -92,38 +94,44 @@ input::placeholder{
 	display: flex;
 	flex-direction: column;
 	align-items: center;
-	margin-top: 10px;
-	margin-bottom :10px;
 	width:100%;
 	height: 100%;
-	height: ;
 	border-radius: 5px;
 
 }
 .input__subject{
 	width: 100%;
-	height: 10%;
+	height: 30px;
+	margin-bottom: 5px;
 	border-radius: 5px;
 	border: 0px;
+	text-indent: 10px;
+	font-size: 18px;
+	font-style: bold;
+	outline: none;
 }
 .input__article{
-	margin:10px;
+	padding: 5px;
 	resize: none;
-	width: 100%;
-	height: 65%;
-	border-radius: 5px;
+	width: calc(100% - 10px);
+	height: 300px;
+	border-radius: 5px 5px 0 0;
 	border: 0px;
+	font-size: 15px;
+	outline: none;
 
 }
 .input__buttons{
 	width: 100%;
-	display: inline-flex;
-	justify-content: flex-end;
-	border-radius: 5px;
+	border-radius: 0,0,5px 5px;
+	background-color: white;
 
 }
-.input__buttons input{
-	margin-left: 10px;
+.input__buttons input:nth-child(1){
+	opacity: 0.4;
+}
+.input__buttons input:nth-child(n+2){
+	height: 30px;
 	font-size: 1em;
 	color:white;
 	background-color: #8a0a8a;
@@ -151,6 +159,9 @@ input::placeholder{
 	height: 500px;
 	margin-bottom: 10px;
 	background-color: white;	
+}
+.board__bigarticle p {
+	white-space: pre-wrap;
 }
 .board__bigothers{
 	display: inline-flex;
