--- a/TeamProject/templates/main.html
+++ b/TeamProject/templates/main.html
@@ -26,11 +26,11 @@
             <div class="login_title">
                 Login
             </div>
-            <div class="login_id">
-                <input type="text" name="id" class="login_input" placeholder="Enter Your ID" autocomplete="off">
+            <div>
+                <input type="text" id="login_id" name="id" class="login_input" placeholder="Enter Your ID" autocomplete="off">
             </div>
-            <div class="login_pw">
-                <input type="password" name="pw" class="login_input" placeholder="Enter Your PW" autocomplete="off">
+            <div>
+                <input type="password" id="login_pw" name="pw" class="login_input" placeholder="Enter Your PW" autocomplete="off">
             </div>
             <div><button id="login_btn" class="login_btn">LOGIN</button></div>
         </div>
