--- a/TeamProject/static/css/Rooms.css
+++ b/TeamProject/static/css/Rooms.css
@@ -1,10 +1,9 @@
 .Board{
+	position: relative;
 	display:flex;
 	flex-direction:column;
 	align-items: center;
 	padding-top: 70px;
-/*	justify-content: space-around;*/
-	/*overflow : hidden;*/
 	position: absolute;
 	background: transparent;
 	width: 70%;
@@ -122,16 +121,23 @@ input::placeholder{
 
 }
 .input__buttons{
+	position: relative;
 	width: 100%;
+	height: 40px;
 	border-radius: 0,0,5px 5px;
 	background-color: white;
 
 }
 .input__buttons input:nth-child(1){
+	position: absolute;
+	left: 15px;
 	opacity: 0.4;
 }
 .input__buttons input:nth-child(n+2){
+	position: absolute;
+	right: 10px;
 	height: 30px;
+	margin-bottom: 10px;
 	font-size: 1em;
 	color:white;
 	background-color: #8a0a8a;
@@ -139,6 +145,10 @@ input::placeholder{
 	padding: 2px;
 
 }
+.input__buttons input:nth-child(2){
+	right: 35px;
+}
+
 .input__big{
 	display: flex;
 	flex-direction: column;
@@ -193,4 +203,13 @@ input::placeholder{
 	height: 40px;
 	background-color: orange;
 
+}
+@media screen and (max-width: 768px) {
+	.Board{
+		width: 90%;
+		top: 50%;
+		left:50%;
+		transform: translate(-50%, -50%);
+		padding-top: 120px;
+	}
 }
