--- a/TeamProject/static/css/style.css
+++ b/TeamProject/static/css/style.css
@@ -4,17 +4,18 @@
 }
 
 body{
+	position: relative;
 	font-size: 14px;
     line-height: 1.5;
     font-family: 'Nanum Gothic', sans-serif;
     background-color: #D5C2EE;
 }
 header{
+	position: fixed;
+	top: 0;
 	display: flex;
 	align-items: left;
-	justify-content: space-between;
-	position: fixed;
-	top: 0; 
+	justify-content: space-between; 
 	width: 100%;
 	height: 70px;
 	z-index: 1;
@@ -53,9 +54,10 @@ header{
 	position: fixed;
 	top: 90px;
 	right: 10px; 
-	width: 30%;
+	width: 230px;
 	height: 80%;
 }
+
 .side_best{
 	width: 100%;
 	height: 40%;
@@ -79,4 +81,10 @@ header{
 	border-radius: 5px;
 	background-color: white;
 
+}
+
+@media screen and (max-width: 768px) {
+	.side{
+		visibility: hidden;
+	}
 }
