--- a/TeamProject/static/css/main.css
+++ b/TeamProject/static/css/main.css
@@ -294,7 +294,7 @@ a:active {
 	height: 100vh;
 	z-index: 10;
 	top: 0;
-	display: none;
+	/* display: none; */
 }
 
 .login_modal {
@@ -304,7 +304,7 @@ a:active {
 	height: 50vh;
 	/* background: rgb(250, 239, 255); */
 	background: #fff;
-	opacity: 1;
+	opacity: 0;
 	display: flex;
 	align-items: center;
 	justify-content: center;
@@ -314,6 +314,8 @@ a:active {
 	bottom: 0;
 	right: 0;
 	margin: auto;
+	transition: all .8s cubic-bezier(0.68, -0.55, 0.265, 1.55);
+	transform: translateY(20%) translateX(0%) rotateX(-25deg);
 }
 
 .login_exit {
@@ -379,5 +381,115 @@ a:active {
 }
 
 .login_btn:hover{
+	background: #474787;
+}
+
+/* --------------- signup ---------------- */
+
+.signup_modal_back {
+	background: rgb(0, 0, 0, 0.5);
+	position: fixed;
+	width: 100vw;
+	height: 100vh;
+	z-index: 10;
+	top: 0;
+	/* display: none; */
+}
+
+.signup_modal {
+	font-family: sans-serif;
+	position: absolute;
+	width: 50vw;
+	height: 90vh;
+	/* background: rgb(250, 239, 255); */
+	background: #fff;
+	opacity: 0;
+	display: flex;
+	align-items: flex-end;
+	padding-right: 20vw;
+	justify-content: center;
+	flex-direction: column;
+	top: 0;
+	left: 0;
+	bottom: 0;
+	right: 0;
+	margin: auto;
+	transition: all .8s cubic-bezier(0.68, -0.55, 0.265, 1.55);
+	transform: translateY(20%) translateX(0%) rotateX(-25deg);
+
+}
+
+.signup_exit {
+	position: absolute;
+	top: 5px;
+	right: 5px;
+	border-radius: 50%;
+	width: 30px;
+	height: 30px;
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	cursor: pointer;
+	transition: .2s all;
+	font-weight: 600;
+	color: #a29bfe;
+}
+.signup_exit:hover {
+	background: #a29bfe;
+	color: white;
+}
+
+
+.signup_title {
+	font-weight: bold;
+	font-size: 2rem;
+	color: #474787;
+	margin-bottom: 2vh;
+	width: 30vw;
+	text-align: center;
+}
+
+.signup_sub{
+	font-weight: bold;
+	font-size: 1em;
+	color:#474787;
+}
+
+.signup_input {
+	transition: all 0.3s cubic-bezier(0.64, 0.09, 0.08, 1);
+	background: linear-gradient(to bottom, rgba(255, 255, 255, 0) 97%, #a29bfe 3%);
+	background-position: -800px 0;
+	background-repeat: no-repeat;
+
+	font-size: 1em;
+	color: #474787;
+	font-weight: 500;
+	width: 30vw;
+	padding: 0.6rem;
+	margin: 1rem 0 0 1rem;
+	/* border: solid 2px rgba(255, 255, 255, 0.8); */
+	border: solid 2px lavender;
+}
+.signup_input:focus {
+	font-weight: bold;
+	box-shadow: none;
+	outline: none;
+	background-position: 0 0;
+}
+
+.signup_btn {
+	font-size: 1em;
+	color: #fff;
+	background: #a29bfe;
+	border: 1px solid whitesmoke;
+	cursor: pointer;
+	padding: 0.8rem;
+	width: 30vw;
+	margin-top: 1rem;
+	letter-spacing: 4px;
+	transition: .5s all;
+}
+
+.signup_btn:hover{
 	background: #474787;
 }
