--- a/TeamProject/templates/main.html
+++ b/TeamProject/templates/main.html
@@ -15,26 +15,14 @@
             <span class="logo">ROOMS</span>
         </div>
         <div class="sub-container">
-            <span class="main_login">Login</span> | 
+            <span class="main_login">Login</span> |
             <span class="main_signup">Sign up</span>
         </div>
     </div>
 
-    <div class="login_modal_back">
-        <div class="login_modal">
-            <div class="login_exit">X</div>
-            <div class="login_title">
-                Login
-            </div>
-            <div>
-                <input type="text" id="login_id" name="id" class="login_input" placeholder="Enter Your ID" autocomplete="off">
-            </div>
-            <div>
-                <input type="password" id="login_pw" name="pw" class="login_input" placeholder="Enter Your PW" autocomplete="off">
-            </div>
-            <div><button id="login_btn" class="login_btn">LOGIN</button></div>
-        </div>
-    </div>
+    <div id="login_container"></div>
+
+    <div id="signup_container"></div>
 
     <div class="sub-title">
         베스트 룸
@@ -307,6 +295,8 @@
         AOS.init();
     </script>
     <script src="../static/js/main.js" type="text/javascript"></script>
+    <script src="../static/js/login.js" type="text/javascript"></script>
+    <script src="../static/js/signup.js" type="text/javascript"></script>
 
 </body>
 
