일부 CSS grid 적용 (20.08.31)

--- a/TeamProject/templates/main.html
+++ b/TeamProject/templates/main.html
@@ -95,133 +95,133 @@
 
     <div class="best_board aos-animate aos-init" data-aos="zoom-out" data-aos-duration="1000">
         <div class="board board_1">
-            <div class="board_room">
+            <span class="board_room">
                 [메이플스토리]
-            </div>
-            <div class="board_title">
+            </span>
+            <span class="board_title">
                 떴냐?
-            </div>
+            </span>
         </div>
         <div class="board board_2">
-            <div class="board_room">
+            <span class="board_room">
                 [어몽어스]
-            </div>
-            <div class="board_title">
+            </span>
+            <span class="board_title">
                 임포 레전드판
-            </div>
+            </span>
         </div>
         <div class="board board_3">
-            <div class="board_room">
+            <span class="board_room">
                 [축구]
-            </div>
-            <div class="board_title">
+            </span>
+            <span class="board_title">
                 이걸?
-            </div>
+            </span>
         </div>
         <div class="board board_4">
-            <div class="board_room">
+            <span class="board_room">
                 [리그오브레전드]
-            </div>
-            <div class="board_title">
+            </span>
+            <span class="board_title">
                 SKT 탈락 ㅋㅋㅋㅋㅋㅋㅋㅋㅋㅋㅋㅋㅋㅋㅋㅋㅋㅋㅋ
-            </div>
+            </span>
         </div>
         <div class="board board_5">
-            <div class="board_room">
+            <span class="board_room">
                 [축구]
-            </div>
-            <div class="board_title">
+            </span>
+            <span class="board_title">
                 리버풀 우승
-            </div>
+            </span>
         </div>
         <div class="board board_6">
-            <div class="board_room">
+            <span class="board_room">
                 [축구]
-            </div>
-            <div class="board_title">
+            </span>
+            <span class="board_title">
                 이걸?
-            </div>
+            </span>
         </div>
         <div class="board board_7">
-            <div class="board_room">
+            <span class="board_room">
                 [축구]
-            </div>
-            <div class="board_title">
+            </span>
+            <span class="board_title">
                 이걸?
-            </div>
+            </span>
         </div>
         <div class="board board_8">
-            <div class="board_room">
+            <span class="board_room">
                 [축구]
-            </div>
-            <div class="board_title">
+            </span>
+            <span class="board_title">
                 이걸?
-            </div>
+            </span>
         </div>
         <div class="board board_9">
-            <div class="board_room">
+            <span class="board_room">
                 [야구]
-            </div>
-            <div class="board_title">
+            </span>
+            <span class="board_title">
                 '그' 팀 우승 확률
-            </div>
+            </span>
         </div>
         <div class="board board_10">
-            <div class="board_room">
+            <span class="board_room">
                 [축구]
-            </div>
-            <div class="board_title">
+            </span>
+            <span class="board_title">
                 이걸?
-            </div>
+            </span>
         </div>
         <div class="board board_11">
-            <div class="board_room">
+            <span class="board_room">
                 [어몽어스]
-            </div>
-            <div class="board_title">
+            </span>
+            <span class="board_title">
                 빅헤드 만난 판
-            </div>
+            </span>
         </div>
         <div class="board board_12">
-            <div class="board_room">
+            <span class="board_room">
                 [축구]
-            </div>
-            <div class="board_title">
+            </span>
+            <span class="board_title">
                 이걸?
-            </div>
+            </span>
         </div>
         <div class="board board_13">
-            <div class="board_room">
+            <span class="board_room">
                 [리그오브레전드]
-            </div>
-            <div class="board_title">
+            </span>
+            <span class="board_title">
                 진짜 closer는 전설이다
-            </div>
+            </span>
         </div>
         <div class="board board_14">
-            <div class="board_room">
+            <span class="board_room">
                 [축구]
-            </div>
-            <div class="board_title">
+            </span>
+            <span class="board_title">
                 이걸?ㅋㅋㅋㅋㅋㅋㅋㅋㅋㅋㅋㅋㅋㅋㅋㅋㅋㅋㅋㅋㅋㅋ
-            </div>
+            </span>
         </div>
         <div class="board board_15">
-            <div class="board_room">
+            <span class="board_room">
                 [피파온라인]
-            </div>
-            <div class="board_title">
+            </span>
+            <span class="board_title">
                 메날두
-            </div>
+            </span>
 
         </div>
         <div class="board board_16">
-            <div class="board_room">
+            <span class="board_room">
                 [축구]
-            </div>
-            <div class="board_title">
+            </span>
+            <span class="board_title">
                 이걸?
-            </div>
+            </span>
 
         </div>
     </div>
@@ -243,7 +243,42 @@
                     게임
                 </div>
                 <div class="small_room">
-
+                    <span>
+                        메이플스토리
+                    </span>
+                    <span>
+                        리그오브레전드
+                    </span>
+                    <span>
+                        발로란트
+                    </span>
+                    <span>
+                        어몽어스
+                    </span>
+                    <span>
+                        서든어택
+                    </span>
+                    <span>
+                        로스트아크
+                    </span>
+                    <span>
+                        메이플스토리
+                    </span>
+                    <span>
+                        리그오브레전드
+                    </span>
+                    <span>
+                        발로란트
+                    </span>
+                    <span>
+                        어몽어스
+                    </span>
+                    <span>
+                        서든어택
+                    </span>
+                    <span>
+                        로스트아크
+                    </span>
                 </div>
             </div>
             <div class="big_room">
