인증방식 업데이트(20.08.31)-미완

--- a/PROJECT2/templates/home.html
+++ b/PROJECT2/templates/home.html
@@ -20,7 +20,7 @@
             }
 
             $.ajax({
-                url: '/api/v1/users',
+                url: '/api/v1/sign_up',
                 contentType:' application/json',
                 method: 'GET',//조회임으로 get으로
                 beforeSend: function(a){
